--- a/reyvsid.html
+++ b/reyvsid.html
@@ -16,7 +16,18 @@
         </div>
         <div class="grid_b">
             <p>Web & Graphic<br>Designer</p>
-            <p id="mtop">Works<br>About</p>
+            <details id="mtop">
+                <summary>Works</summary>
+                <p>1 Ordine di lettura <br>
+                2 Dot <br>
+                3 Immaginazione <br>
+                4 Tangram <br>
+                5 Pattern <br>
+                6 Griglia <br>
+                7 Gesto <br>
+                8 Problemi</p>
+              </details>
+            <p>About</p>
             <p id="mtop">Milan, MI, Italy</p>
             <p id="mtop">Email<br>
             Linkedin<br>
@@ -24,5 +35,6 @@
             Behance</p>
         </div>
     </div>
+    <div id="circle"></div>
 </body>
 </html>
