--- a/reyvsid.html
+++ b/reyvsid.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="it">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -9,32 +10,38 @@
     <link rel="stylesheet" href="style.css">
     <title>REY vs ID</title>
 </head>
+
 <body>
-    <div class="grid_2">
-        <div class="grid_a">
-            <p>Jether Rey Pagaduan</p>
-        </div>
-        <div class="grid_b">
-            <p>Web & Graphic<br>Designer</p>
-            <details id="mtop">
-                <summary>Works</summary>
-                <p>1 Ordine di lettura <br>
-                2 Dot <br>
-                3 Immaginazione <br>
-                4 Tangram <br>
-                5 Pattern <br>
-                6 Griglia <br>
-                7 Gesto <br>
-                8 Problemi</p>
-              </details>
-            <p>About</p>
-            <p id="mtop">Milan, MI, Italy</p>
-            <p id="mtop">Email<br>
-            Linkedin<br>
-            Instagram<br>
-            Behance</p>
+    <div>
+        <div class="grid_2">
+            <div class="grid_a">
+                <p>Jether Rey Pagaduan</p>
+            </div>
+            <div class="grid_b">
+                <p>Web & Graphic<br>Designer</p>
+                <details id="mtop">
+                    <summary>Works</summary>
+                    <p>1 Ordine di lettura <br>
+                        2 Dot <br>
+                        3 Immaginazione <br>
+                        4 Tangram <br>
+                        5 Pattern <br>
+                        6 Griglia <br>
+                        7 Gesto <br>
+                        8 Problemi
+                    </p>
+                </details>
+                <p>About</p>
+                <p id="mtop">Milan, MI, Italy</p>
+                <p id="mtop">Email<br>
+                    Linkedin<br>
+                    Instagram<br>
+                    Behance</p>
+            </div>
         </div>
     </div>
-    <div id="circle"></div>
+    <!-- <img src="img/pallino.png" alt="pallino"> -->
+    <!-- <div id="circle"></div> -->
 </body>
+
 </html>
