--- a/reyvsid.html
+++ b/reyvsid.html
@@ -12,7 +12,7 @@
 </head>
 
 <body>
-    <div>
+    <div class="pallino">
         <div class="grid_2">
             <div class="grid_a">
                 <p>Jether Rey Pagaduan</p>
@@ -31,7 +31,7 @@
                         8 Problemi
                     </p>
                 </details>
-                <p>About</p>
+                <p><a href="about.html">About</a></p>
                 <p id="mtop">Milan, MI, Italy</p>
                 <p id="mtop">Email<br>
                     Linkedin<br>
@@ -40,7 +40,6 @@
             </div>
         </div>
     </div>
-    <!-- <img src="img/pallino.png" alt="pallino"> -->
     <!-- <div id="circle"></div> -->
 </body>
 
