--- a/reyvsid.html
+++ b/reyvsid.html
@@ -31,9 +31,12 @@
                         8 Problemi
                     </p>
                 </details>
-                <p><a href="about.html">About</a></p>
-                <p id="mtop">Milan, MI, Italy</p>
-                <p id="mtop">Email<br>
+                <p><a href="about.html">About</a></p>   
+            </div>
+            <div class="grid_c">
+                <p>Milan, MI, Italy</p>
+                <p id="mtop">jetherpagaduan@gmail.com</p>
+                <p id="mtop1">Email<br>
                     Linkedin<br>
                     Instagram<br>
                     Behance</p>
