--- a/reyvsid.html
+++ b/reyvsid.html
@@ -8,7 +8,7 @@
     <meta name="author" content="REY">
     <meta name="description" content="Progetto Web Coding">
     <link rel="stylesheet" href="style.css">
-    <title>REY vs ID</title>
+    <title>HOME - reyvsid</title>
 </head>
 
 <body>
@@ -19,7 +19,7 @@
             </div>
             <div class="grid_b">
                 <p>Web & Graphic<br>Designer</p>
-                <details id="mtop">
+                <!-- <details id="mtop">
                     <summary>Works</summary>
                     <p>1 Ordine di lettura <br>
                         2 Dot <br>
@@ -30,7 +30,8 @@
                         7 Gesto <br>
                         8 Problemi
                     </p>
-                </details>
+                </details> -->
+                <p id="mtop"><a href="index.html">Works</a></p> 
                 <p><a href="about.html">About</a></p>   
             </div>
             <div class="grid_c">
