--- a/about.html
+++ b/about.html
@@ -8,18 +8,19 @@
     <meta name="author" content="REY">
     <meta name="description" content="Progetto Web Coding">
     <link rel="stylesheet" href="style.css">
-    <title>REY vs ID</title>
+    <title>ABOUT - reyvsid</title>
 </head>
 
 <body>
     <div class="pallino">
         <div class="grid_2">
-            <div class="grid_a">
-                <p>Jether Rey Pagaduan</p>
+            <div class="grid_a grey">
+                <p><a href="reyvsid.html" style="
+                    color: rgba(0, 0, 0, 0.4);">Jether Rey Pagaduan</a></p>
             </div>
             <div class="grid_b">
-                <p>Web & Graphic<br>Designer</p>
-                <details id="mtop">
+                <p class="grey">Web & Graphic<br>Designer</p>
+                <!-- <details class="grey" id="mtop">
                     <summary>Works</summary>
                     <p>1 Ordine di lettura <br>
                         2 Dot <br>
@@ -30,24 +31,35 @@
                         7 Gesto <br>
                         8 Problemi
                     </p>
-                </details>
-                <p><a href="about.html">About</a></p>
+                </details> -->
+                <p id="mtop"><a href="index.html" style="
+                    color: rgba(0, 0, 0, 0.4);">Works</a></p> 
+                <p>
+                    <a href="about.html" style="font-weight: 700;">About</a>
+                </p>
+                <p class="about_m">
+                    Corso di interaction design <br>
+                    A.A. 2022/23 <br>
+                    Scuola Mohole <br>
+                    <br>
+                    Le esercitazioni sono state svolte durante il corso di interaction design e trattano temi come la percezione, la configurazione, e l’immaginazione. L’apprendimento è un’esperienza attiva e dinamica
+                    che prevede una pratica manuale ed intellettuale. Gli esercizi sono dei costruttori di significato. Ampliano le conoscenze pregresse ed aiutano a sviluppare uno sguardo critico verso ciò che ci circonda facendo crescere le potenzialità immaginative ed espressive.
+                </p>
+            </div>
+            <div class="about">
                 <p>
                     Corso di interaction design <br>
                     A.A. 2022/23 <br>
                     Scuola Mohole <br>
                     <br>
-                    Le esercitazioni sono state svolte durante il corso di interaction design e trattano temi come la
-                    percezione, la configurazione, e l’immaginazione. L’apprendimento è un’esperienza attiva e dinamica
-                    che prevede una pratica manuale ed intellettuale. Gli esercizi sono dei costruttori di significato.
-                    Ampliano le conoscenze pregresse ed aiutano a sviluppare uno sguardo critico verso ciò che ci
-                    circonda facendo crescere le potenzialità immaginative ed espressive.
+                    Le esercitazioni sono state svolte durante il corso di interaction design e trattano temi come la percezione, la configurazione, e l’immaginazione. L’apprendimento è un’esperienza attiva e dinamica
+                    che prevede una pratica manuale ed intellettuale. Gli esercizi sono dei costruttori di significato. Ampliano le conoscenze pregresse ed aiutano a sviluppare uno sguardo critico verso ciò che ci circonda facendo crescere le potenzialità immaginative ed espressive.
                 </p>
             </div>
-            <div class="grid_c">
+            <div class="grid_c grey">
                 <p>Milan, MI, Italy</p>
-                <p id="mtop">jetherpagaduan@gmail.com</p>
-                <p id="mtop1">Email<br>
+                <p class="grey" id="mtop">jetherpagaduan@gmail.com</p>
+                <p class="grey" id="mtop1">Email<br>
                     Linkedin<br>
                     Instagram<br>
                     Behance</p>
