--- a/about.html
+++ b/about.html
@@ -33,7 +33,7 @@
                     </p>
                 </details> -->
                 <p id="mtop"><a href="index.html" style="
-                    color: rgba(0, 0, 0, 0.4);">Works</a></p> 
+                    color: rgba(0, 0, 0, 0.4);">Works</a></p>
                 <p>
                     <a href="about.html" style="font-weight: 700;">About</a>
                 </p>
@@ -42,8 +42,11 @@
                     A.A. 2022/23 <br>
                     Scuola Mohole <br>
                     <br>
-                    Le esercitazioni sono state svolte durante il corso di interaction design e trattano temi come la percezione, la configurazione, e l’immaginazione. L’apprendimento è un’esperienza attiva e dinamica
-                    che prevede una pratica manuale ed intellettuale. Gli esercizi sono dei costruttori di significato. Ampliano le conoscenze pregresse ed aiutano a sviluppare uno sguardo critico verso ciò che ci circonda facendo crescere le potenzialità immaginative ed espressive.
+                    Le esercitazioni sono state svolte durante il corso di interaction design e trattano temi come la
+                    percezione, la configurazione, e l’immaginazione. L’apprendimento è un’esperienza attiva e dinamica
+                    che prevede una pratica manuale ed intellettuale. Gli esercizi sono dei costruttori di significato.
+                    Ampliano le conoscenze pregresse ed aiutano a sviluppare uno sguardo critico verso ciò che ci
+                    circonda facendo crescere le potenzialità immaginative ed espressive.
                 </p>
             </div>
             <div class="about">
@@ -52,8 +55,11 @@
                     A.A. 2022/23 <br>
                     Scuola Mohole <br>
                     <br>
-                    Le esercitazioni sono state svolte durante il corso di interaction design e trattano temi come la percezione, la configurazione, e l’immaginazione. L’apprendimento è un’esperienza attiva e dinamica
-                    che prevede una pratica manuale ed intellettuale. Gli esercizi sono dei costruttori di significato. Ampliano le conoscenze pregresse ed aiutano a sviluppare uno sguardo critico verso ciò che ci circonda facendo crescere le potenzialità immaginative ed espressive.
+                    Le esercitazioni sono state svolte durante il corso di interaction design e trattano temi come la
+                    percezione, la configurazione, e l’immaginazione. L’apprendimento è un’esperienza attiva e dinamica
+                    che prevede una pratica manuale ed intellettuale. Gli esercizi sono dei costruttori di significato.
+                    Ampliano le conoscenze pregresse ed aiutano a sviluppare uno sguardo critico verso ciò che ci
+                    circonda facendo crescere le potenzialità immaginative ed espressive.
                 </p>
             </div>
             <div class="grid_c grey">
