--- a/reyvsid.html
+++ b/reyvsid.html
@@ -37,7 +37,7 @@
             <div class="grid_c">
                 <p>Milan, MI, Italy</p>
                 <p id="mtop">jetherpagaduan@gmail.com</p>
-                <p id="mtop1">Email<br>
+                <p id="mtop1">
                     Linkedin<br>
                     Instagram<br>
                     Behance</p>
