--- a/about.html
+++ b/about.html
@@ -65,7 +65,7 @@
             <div class="grid_c grey">
                 <p>Milan, MI, Italy</p>
                 <p class="grey" id="mtop">jetherpagaduan@gmail.com</p>
-                <p class="grey" id="mtop1">Email<br>
+                <p class="grey" id="mtop1">
                     Linkedin<br>
                     Instagram<br>
                     Behance</p>
