--- a/about.html
+++ b/about.html
@@ -15,7 +15,7 @@
     <div class="pallino">
         <div class="grid_2">
             <div class="grid_a grey">
-                <p><a href="reyvsid.html" style="
+                <p><a href="index.html" style="
                     color: rgba(0, 0, 0, 0.4);">Jether Rey Pagaduan</a></p>
             </div>
             <div class="grid_b">
@@ -32,7 +32,7 @@
                         8 Problemi
                     </p>
                 </details> -->
-                <p id="mtop"><a href="index.html" style="
+                <p id="mtop"><a href="works.html" style="
                     color: rgba(0, 0, 0, 0.4);">Works</a></p>
                 <p>
                     <a href="about.html" style="font-weight: 700;">About</a>
