--- a/index.html
+++ b/index.html
@@ -8,19 +8,18 @@
     <meta name="author" content="REY">
     <meta name="description" content="Progetto Web Coding">
     <link rel="stylesheet" href="style.css">
-    <title>WORKS - reyvsid</title>
+    <title>HOME - reyvsid</title>
 </head>
 
 <body>
     <div class="pallino">
         <div class="grid_2">
-            <div class="grid_a grey">
-                <p><a href="reyvsid.html" style="
-                    color: rgba(0, 0, 0, 0.4);"">Jether Rey Pagaduan</a></p>
+            <div class="grid_a">
+                <p>Jether Rey Pagaduan</p>
             </div>
             <div class="grid_b">
-                        <p class="grey">Web & Graphic<br>Designer</p>
-                        <!-- <details class="grey" id="mtop">
+                <p>Web & Graphic<br>Designer</p>
+                <!-- <details id="mtop">
                     <summary>Works</summary>
                     <p>1 Ordine di lettura <br>
                         2 Dot <br>
@@ -32,35 +31,13 @@
                         8 Problemi
                     </p>
                 </details> -->
-                        <p id="mtop"><a href="about.html" style="color: rgba(0, 0, 0, 0.4);">About</a></p>
-                        <p><a href="index.html" style="font-weight: 700;">Works</a></p>
-                        <p class="about_m">
-                            1 Ordine di lettura <br>
-                            2 Dot <br>
-                            3 Immaginazione <br>
-                            4 Tangram <br>
-                            5 Pattern <br>
-                            6 Griglia <br>
-                            7 Gesto <br>
-                            8 Problemi
-                        </p>
+                <p id="mtop"><a href="works.html">Works</a></p>
+                <p><a href="about.html">About</a></p>
             </div>
-            <div class="about">
-                <p>
-                    1 Ordine di lettura <br>
-                    2 Dot <br>
-                    3 Immaginazione <br>
-                    4 Tangram <br>
-                    5 Pattern <br>
-                    6 Griglia <br>
-                    7 Gesto <br>
-                    8 Problemi
-                </p>
-            </div>
-            <div class="grid_c grey">
+            <div class="grid_c">
                 <p>Milan, MI, Italy</p>
-                <p class="grey" id="mtop">jetherpagaduan@gmail.com</p>
-                <p class="grey" id="mtop1">
+                <p id="mtop">jetherpagaduan@gmail.com</p>
+                <p id="mtop1">
                     Linkedin<br>
                     Instagram<br>
                     Behance</p>
