--- a/ordine.html
+++ b/ordine.html
@@ -12,58 +12,22 @@
 </head>
 
 <body>
-    <div class="pallino">
-        <div class="grid_2">
+    <div class="pallino faded">
+        <div class="grid_2 grid_w">
             <div class="grid_a grey">
                 <p><a href="index.html" style="
-                    color: rgba(0, 0, 0, 0.4);"">Jether Rey Pagaduan</a></p>
+                    color: rgba(0, 0, 0, 0.4);"">Home</a></p>
             </div>
-            <div class=" grid_b">
-                        <p class="grey">Web & Graphic<br>Designer</p>
-                        <!-- <details class="grey" id="mtop">
-                    <summary>Works</summary>
-                    <p>1 Ordine di lettura <br>
-                        2 Dot <br>
-                        3 Immaginazione <br>
-                        4 Tangram <br>
-                        5 Pattern <br>
-                        6 Griglia <br>
-                        7 Gesto <br>
-                        8 Problemi
-                    </p>
-                </details> -->
-                        <p id="mtop"><a href="about.html" style="color: rgba(0, 0, 0, 0.4);">About</a></p>
-                        <p><a href="works.html" style="font-weight: 700;">Works</a></p>
-                        <p class="about_m">
-                            1 Ordine di lettura <br>
-                            2 Dot <br>
-                            3 Immaginazione <br>
-                            4 Tangram <br>
-                            5 Pattern <br>
-                            6 Griglia <br>
-                            7 Gesto <br>
-                            8 Problemi
-                        </p>
-            </div>
-            <div class="about">
+            <div class="works">
+                <p><a href="works.html" style="font-weight: 700; color: rgba(0, 0, 0, 0.4);">Works</a></p>
+                <article class="works" id="mtop">1 Ordine di lettura</article>
                 <p>
-                    1 Ordine di lettura <br>
-                    2 Dot <br>
-                    3 Immaginazione <br>
-                    4 Tangram <br>
-                    5 Pattern <br>
-                    6 Griglia <br>
-                    7 Gesto <br>
-                    8 Problemi
+                    Posizionare su un foglio A4 i numeri da 1 a 5 nella sequenza corretta da sinistra verso destra. Ciascun numero dovrà idealmente occupare una colonna verticale e può essere spostato lungo quest’asse verticale in alto e in basso, possono essere ruotate ma non ribaltate specularmente ne sovrapporsi. Lo scopo dell’esercizio è fare in modo che i numeri non vengano letti in ordine crescente dall’1 al 5 (12345). Esegui almeno 3 configurazioni definitive. (Fai molte prove, anche quelle verranno prese in considerazione). <br> <br> Riferimento: Giovanni Anceschi
                 </p>
             </div>
-            <div class="grid_c grey">
-                <p>Milan, MI, Italy</p>
-                <p class="grey" id="mtop">jetherpagaduan@gmail.com</p>
-                <p class="grey" id="mtop1">
-                    Linkedin<br>
-                    Instagram<br>
-                    Behance</p>
+
+            <div class="ordine">
+                <img class="img" src="img/ordine.jpg" alt="Ordine di Lettura">
             </div>
         </div>
     </div>
