--- a/works.html
+++ b/works.html
@@ -35,7 +35,7 @@
                         <p id="mtop"><a href="about.html" style="color: rgba(0, 0, 0, 0.4);">About</a></p>
                         <p><a href="works.html" style="font-weight: 700;">Works</a></p>
                         <p class="about_m">
-                            1 Ordine di lettura <br>
+                            <a href="ordine.html">1 Ordine di lettura</a> <br>
                             2 Dot <br>
                             3 Immaginazione <br>
                             4 Tangram <br>
@@ -47,7 +47,7 @@
             </div>
             <div class="about">
                 <p>
-                    1 Ordine di lettura <br>
+                    <a href="ordine.html">1 Ordine di lettura</a> <br>
                     2 Dot <br>
                     3 Immaginazione <br>
                     4 Tangram <br>
