--- a/works.html
+++ b/works.html
@@ -36,7 +36,7 @@
                         <p><a href="works.html" style="font-weight: 700;">Works</a></p>
                         <p class="about_m">
                             <a href="ordine.html">1 Ordine di lettura</a> <br>
-                            2 Dot <br>
+                            <a href="dot.html">2 Dot</a><br>
                             3 Immaginazione <br>
                             4 Tangram <br>
                             5 Pattern <br>
@@ -48,7 +48,7 @@
             <div class="about">
                 <p>
                     <a href="ordine.html">1 Ordine di lettura</a> <br>
-                    2 Dot <br>
+                    <a href="dot.html">2 Dot</a><br>
                     3 Immaginazione <br>
                     4 Tangram <br>
                     5 Pattern <br>
