--- a/dot.html
+++ b/dot.html
@@ -20,14 +20,20 @@
             </div>
             <div class="works">
                 <p><a href="works.html" style="font-weight: 700; color: rgba(0, 0, 0, 0.4);">Works</a></p>
-                <h3 class="works" id="mtop">1 Ordine di lettura</h3>
+                <h3 class="works" id="mtop">2 Dot</h3>
                 <p>
-                    Posizionare su un foglio A4 i numeri da 1 a 5 nella sequenza corretta da sinistra verso destra. Ciascun numero dovrà idealmente occupare una colonna verticale e può essere spostato lungo quest’asse verticale in alto e in basso, possono essere ruotate ma non ribaltate specularmente ne sovrapporsi. Lo scopo dell’esercizio è fare in modo che i numeri non vengano letti in ordine crescente dall’1 al 5 (12345). Esegui almeno 3 configurazioni definitive. (Fai molte prove, anche quelle verranno prese in considerazione). <br> <br> Riferimento: Giovanni Anceschi
+                    Disporre nove cerchi neri di 2 cm di diametro su un fondo bianco di lato 30 cm. Attenzione, i cerchi non possono sovrapporsi l’un l’altro. Crea delle composizioni secondo le seguenti disposizioni: <br>
+	                1 Casuale <br>
+	                2 Tensione max. <br>
+	                3 Tensione min. <br>
+	                4 Soggetto figurativo <br>
+	                5 Una lettera
+                    <br> <br> RRiferimento: Paul Rand 
                 </p>
             </div>
 
             <div class="ordine">
-                <img class="img" src="img/ordine.jpg" alt="Ordine di Lettura">
+                <img class="img2" src="img/d1.jpg" alt="Dot">
             </div>
         </div>
     </div>
