--- a/dotff.html
+++ b/dotff.html
@@ -7,19 +7,19 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="author" content="REY">
     <meta name="description" content="Progetto Web Coding">
-    <link rel="stylesheet" href="stylet.css">
-    <title>WORKS - reyvsid</title>
+    <link rel="icon" type="image/x-icon" href="img/favicon.ico">
+    <link rel="stylesheet" href="style.css">
+    <title>DOT - reyvsid</title>
 </head>
 
 <body>
     <div class="pallino faded">
         <div class="grid_2 grid_w">
             <div class="grid_a grey fix">
-                <p><a href="index.html" style="
-                    color: rgba(0, 0, 0, 0.4);"">Home</a></p>
+                <p><a class="grey" href="index.html">Home</a></p>
             </div>
             <div class="works fix">
-                        <p><a href="works.html" style="font-weight: 700; color: rgba(0, 0, 0, 0.4);">Works</a></p>
+                        <p><a class="grey bold" href="works.html">Works</a></p>
                         <h3 class="works" id="mtop">2 Dot</h3>
                         <p>
                             Disporre nove cerchi neri di 2 cm di diametro su un fondo bianco di lato 30 cm. Attenzione,
@@ -33,7 +33,7 @@
                             <br> <br> RRiferimento: Paul Rand
                         </p>
             </div>
-
+            <!-- CAROSELLO -->
             <div class="ordine">
                 <div class="carousel">
                     <div class="carousel-inner">
@@ -70,6 +70,7 @@
                         <label for="carousel-5" class="carousel-control next control-4">›</label>
                         <label for="carousel-4" class="carousel-control prev control-5">‹</label>
                         <label for="carousel-1" class="carousel-control next control-5">›</label>
+                        <!-- INDICATORI -->
                         <!-- <ol class="carousel-indicators">
                             <li>
                                 <label for="carousel-1" class="carousel-bullet">•</label>
@@ -92,7 +93,16 @@
             </div>
         </div>
     </div>
-    <!-- <div id="circle"></div> -->
+    <footer>
+        <div class="footer">
+            <h3>
+                REY
+            </h3>
+            <p>
+                Il sito è stato creato a scopo didattico per il corso accademico della Scuola Mohole di Web & App Development e di Interaction Design
+            </p>
+        </div>
+    </footer>
 </body>
 
 </html>
