--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="author" content="REY">
     <meta name="description" content="Progetto Web Coding">
+    <link rel="icon" type="image/x-icon" href="img/favicon.ico">
     <link rel="stylesheet" href="style.css">
     <title>HOME - reyvsid</title>
 </head>
@@ -19,18 +20,6 @@
             </div>
             <div class="grid_b">
                 <p>Web & Graphic<br>Designer</p>
-                <!-- <details id="mtop">
-                    <summary>Works</summary>
-                    <p>1 Ordine di lettura <br>
-                        2 Dot <br>
-                        3 Immaginazione <br>
-                        4 Tangram <br>
-                        5 Pattern <br>
-                        6 Griglia <br>
-                        7 Gesto <br>
-                        8 Problemi
-                    </p>
-                </details> -->
                 <p id="mtop"><a href="works.html">Works</a></p>
                 <p><a href="about.html">About</a></p>
             </div>
@@ -44,7 +33,16 @@
             </div>
         </div>
     </div>
-    <!-- <div id="circle"></div> -->
+    <footer>
+        <div class="footer">
+            <h3>
+                REY
+            </h3>
+            <p>
+                Il sito è stato creato a scopo didattico per il corso accademico della Scuola Mohole di Web & App Development e di Interaction Design
+            </p>
+        </div>
+    </footer>
 </body>
 
 </html>
