--- a/works.html
+++ b/works.html
@@ -7,6 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="author" content="REY">
     <meta name="description" content="Progetto Web Coding">
+    <link rel="icon" type="image/x-icon" href="img/favicon.ico">
     <link rel="stylesheet" href="style.css">
     <title>WORKS - reyvsid</title>
 </head>
@@ -15,46 +16,23 @@
     <div class="pallino">
         <div class="grid_2">
             <div class="grid_a grey">
-                <p><a href="index.html" style="
-                    color: rgba(0, 0, 0, 0.4);"">Jether Rey Pagaduan</a></p>
+                <p><a class="grey" href="index.html">Jether Rey Pagaduan</a></p>
             </div>
             <div class="grid_b">
                         <p class="grey">Web & Graphic<br>Designer</p>
-                        <!-- <details class="grey" id="mtop">
-                    <summary>Works</summary>
-                    <p>1 Ordine di lettura <br>
-                        2 Dot <br>
-                        3 Immaginazione <br>
-                        4 Tangram <br>
-                        5 Pattern <br>
-                        6 Griglia <br>
-                        7 Gesto <br>
-                        8 Problemi
-                    </p>
-                </details> -->
-                        <p id="mtop"><a href="about.html" style="color: rgba(0, 0, 0, 0.4);">About</a></p>
-                        <p><a href="works.html" style="font-weight: 700;">Works</a></p>
-                        <p class="about_m">
-                            <a href="ordine.html">1 Ordine di lettura</a> <br>
-                            <a href="dot.html">2 Dot</a><br>
-                            3 Immaginazione <br>
-                            4 Tangram <br>
-                            5 Pattern <br>
-                            6 Griglia <br>
-                            7 Gesto <br>
-                            8 Problemi
-                        </p>
+                        <p id="mtop"><a class="grey" href="about.html">About</a></p>
+                        <p><a class="bold" href="works.html">Works</a></p>
             </div>
             <div class="about">
                 <p>
                     <a href="ordine.html">1 Ordine di lettura</a> <br>
-                    <a href="dot.html">2 Dot</a><br>
-                    3 Immaginazione <br>
-                    4 Tangram <br>
-                    5 Pattern <br>
-                    6 Griglia <br>
-                    7 Gesto <br>
-                    8 Problemi
+                    <a href="dotff.html">2 Dot</a><br>
+                    <a href="immaginazione.html">3 Immaginazione</a><br>
+                    <a href="tangram.html">4 Tangram</a><br>
+                    <a href="pattern.html">5 Pattern</a><br>
+                    <a href="griglia.html">6 Griglia</a><br>
+                    <a href="gesto.html">7 Gesto</a><br>
+                    <a href="problemi.html">8 Problemi</a>
                 </p>
             </div>
             <div class="grid_c grey">
@@ -67,7 +45,16 @@
             </div>
         </div>
     </div>
-    <!-- <div id="circle"></div> -->
+    <footer>
+        <div class="footer">
+            <h3>
+                REY
+            </h3>
+            <p>
+                Il sito è stato creato a scopo didattico per il corso accademico della Scuola Mohole di Web & App Development e di Interaction Design
+            </p>
+        </div>
+    </footer>
 </body>
 
 </html>
