--- a/dotf.html
+++ b/dotf.html
@@ -7,6 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="author" content="REY">
     <meta name="description" content="Progetto Web Coding">
+    <link rel="shortcut icon" href="img/favicon.png" type="image/x-icon">
     <link rel="stylesheet" href="stylet.css">
     <title>WORKS - reyvsid</title>
 </head>
