--- a/ordine.html
+++ b/ordine.html
@@ -7,19 +7,19 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="author" content="REY">
     <meta name="description" content="Progetto Web Coding">
+    <link rel="icon" type="image/x-icon" href="img/favicon.ico">
     <link rel="stylesheet" href="style.css">
-    <title>WORKS - reyvsid</title>
+    <title>ORDINE - reyvsid</title>
 </head>
 
 <body>
     <div class="pallino faded">
         <div class="grid_2 grid_w">
             <div class="grid_a grey">
-                <p><a href="index.html" style="
-                    color: rgba(0, 0, 0, 0.4);"">Home</a></p>
+                <p><a class="grey" href="index.html">Home</a></p>
             </div>
             <div class="works">
-                <p><a href="works.html" style="font-weight: 700; color: rgba(0, 0, 0, 0.4);">Works</a></p>
+                <p><a class="grey bold" href="works.html">Works</a></p>
                 <h3 class="works" id="mtop">1 Ordine di lettura</h3>
                 <p>
                     Posizionare su un foglio A4 i numeri da 1 a 5 nella sequenza corretta da sinistra verso destra. Ciascun numero dovrà idealmente occupare una colonna verticale e può essere spostato lungo quest’asse verticale in alto e in basso, possono essere ruotate ma non ribaltate specularmente ne sovrapporsi. Lo scopo dell’esercizio è fare in modo che i numeri non vengano letti in ordine crescente dall’1 al 5 (12345). Esegui almeno 3 configurazioni definitive. (Fai molte prove, anche quelle verranno prese in considerazione). <br> <br> Riferimento: Giovanni Anceschi
@@ -31,7 +31,16 @@
             </div>
         </div>
     </div>
-    <!-- <div id="circle"></div> -->
+    <footer>
+        <div class="footer">
+            <h3>
+                REY
+            </h3>
+            <p>
+                Il sito è stato creato a scopo didattico per il corso accademico della Scuola Mohole di Web & App Development e di Interaction Design
+            </p>
+        </div>
+    </footer>
 </body>
 
 </html>
