--- a/problemi.html
+++ b/problemi.html
@@ -28,122 +28,122 @@
 
             <div class="ordine">
                 <p class="scroll">
-                    01 Le applicazioni non dovrebbero
+                    01<br>Le applicazioni non dovrebbero
                     essere esclusive di dei sistemi
-                    operativi <br>
-                    02 Come organizzarsi al meglio
-                    la giornata?<br>
-                    03 Come diventare più ordinato?<br>
-                    04 Trovare casa a Milano<br>
-                    05 Lo stipendio non arriva alla data
-                    stabilita<br>
-                    06 Lo spreco di acqua<br>
-                    07 Sarebbe fighissimo avere in tutto
-                    il mondo dei puff in 4 stagioni<br>
-                    08 Le auto sono aumentate ma le strade
+                    operativi <br><br>
+                    02 <br>Come organizzarsi al meglio
+                    la giornata?<br><br>
+                    03 <br>Come diventare più ordinato?<br><br>
+                    04 <br>Trovare casa a Milano<br><br>
+                    05 <br>Lo stipendio non arriva alla data
+                    stabilita<br><br>
+                    06 <br>Lo spreco di acqua<br><br>
+                    07 <br>Sarebbe fighissimo avere in tutto
+                    il mondo dei puff in 4 stagioni<br><br>
+                    08 <br>Le auto sono aumentate ma le strade
                     rimangono le stesse e sempre più
-                    trafficate<br>
-                    09 Perché non si può usare il mouse
-                    Apple mentre si ricarica?<br>
-                    10 Perché dobbiamo sempre cibarci
-                    per bisogno?<br>
-                    11 Perché ho sempre fame?<br>
-                    12 Tessera atm che si smaterializza se
-                    messa nella cover del telefono<br>
-                    13 La mancanza di Hardware per input
-                    unico per E-sports<br>
-                    14 Troppi abbonamenti, servirebbe
+                    trafficate<br><br>
+                    09 <br>Perché non si può usare il mouse
+                    Apple mentre si ricarica?<br><br>
+                    10 <br>Perché dobbiamo sempre cibarci
+                    per bisogno?<br><br>
+                    11 <br>Perché ho sempre fame?<br><br>
+                    12 <br>Tessera atm che si smaterializza se
+                    messa nella cover del telefono<br><br>
+                    13 <br>La mancanza di Hardware per input
+                    unico per E-sports<br><br>
+                    14 <br>Troppi abbonamenti, servirebbe
                     un sistema per<br> unificarli assieme
                     ai pagamenti
-                    15 Come combattere i sentimenti
-                    negativi?<br>
-                    16 Il parcheggio dei monopattini non
-                    è sicuro<br>
-                    17 Svegliarsi presto è un problema<br>
-                    18 Come capire e una persona ti parla
-                    alle spalle?<br>
-                    19 Perché la lezione finisce alle 18:30
+                    15 <br>Come combattere i sentimenti
+                    negativi?<br><br>
+                    16 <br>Il parcheggio dei monopattini non
+                    è sicuro<br><br>
+                    17 <br>Svegliarsi presto è un problema<br>
+                    18 <br>Come capire e una persona ti parla
+                    alle spalle?<br><br>
+                    19 <br>Perché la lezione finisce alle 18:30
                     e non ci sono mezzi per tornare
-                    a casa?<br>
-                    20 Un’applicazione migliore per l’agenda
-                    Mohole<br>
-                    21 Macchinette automatiche che
-                    non accettano la carta di credito<br>
-                    22 La parte del parabrezza che non ti
-                    fa vedere le macchine che arrivano<br>
-                    23 Ci vorrebbero più puff nel mondo
-                    e nel giardino di Mohole<br>
-                    24 Oggi non ho problemi,è un problema?<br>
-                    25 I mezzi pubblici in ritardo<br>
-                    26 Restare attenti, seguire<br>
-                    27 Perché il caffè delle macchinette
-                    fa schifo?<br>
-                    28 I prezzi del cibo sono troppo alti<br>
-                    29 Come riuscire a trovare un metodo
-                    per non affliggersi<br>
-                    30 Traffico ad imbuto negli incroci<br>
-                    31 Le cose che si rompono quando
-                    cadono<br>
-                    32 Come aumentare la velocità
+                    a casa?<br><br>
+                    20 <br>Un’applicazione migliore per l’agenda
+                    Mohole<br><br>
+                    21 <br>Macchinette automatiche che
+                    non accettano la carta di credito<br><br>
+                    22 <br>La parte del parabrezza che non ti
+                    fa vedere le macchine che arrivano<br><br>
+                    23 <br>Ci vorrebbero più puff nel mondo
+                    e nel giardino di Mohole<br><br>
+                    24 <br>Oggi non ho problemi,è un problema?<br><br>
+                    25 <br>I mezzi pubblici in ritardo<br><br>
+                    26 <br>Restare attenti, seguire<br><br>
+                    27 <br>Perché il caffè delle macchinette
+                    fa schifo?<br><br>
+                    28 <br>I prezzi del cibo sono troppo alti<br><br>
+                    29 <br>Come riuscire a trovare un metodo
+                    per non affliggersi<br><br>
+                    30 <br>Traffico ad imbuto negli incroci<br><br>
+                    31 <br>Le cose che si rompono quando
+                    cadono<br><br>
+                    32 <br>Come aumentare la velocità
                     della propria camminata senza mezzi
-                    di trasporto<br>
-                    33 Trovare parcheggio è un problema<br>
-                    34 Il problema è che la gente lavora per
-                    i soldi e non per la passione<br>
-                    35 Le persone giudicano senza
-                    conoscere<br>
-                    36 Gli affitti a Milano sono troppo alti<br>
-                    37 Il cambiamento climatico<br>
-                    38 Come risolvere il problema delle zip
-                    che si spaccano sempre<br>
-                    39 Lo speco della luce<br>
-                    40 Come dare un design funzionale
+                    di trasporto<br><br>
+                    33 <br>Trovare parcheggio è un problema<br><br>
+                    34 <br>Il problema è che la gente lavora per
+                    i soldi e non per la passione<br><br>
+                    35 <br>Le persone giudicano senza
+                    conoscere<br><br>
+                    36 <br>Gli affitti a Milano sono troppo alti<br><br>
+                    37 <br>Il cambiamento climatico<br><br>
+                    38 <br>Come risolvere il problema delle zip
+                    che si spaccano sempre<br><br>
+                    39 <br>Lo speco della luce<br><br>
+                    40 <br>Come dare un design funzionale
                     visivamente ed a livello di usabilità
-                    ad una scrivania<br>
-                    41 Dimenticare le cose in giro<br>
-                    42 Come facciamo a ridurre il caos,
+                    ad una scrivania<br><br>
+                    41 <br>Dimenticare le cose in giro<br><br>
+                    42 <br>Come facciamo a ridurre il caos,
                     gli schiamazzi per l’aula “Pietri”
-                    a Mohole?<br>
-                    43 Come spingere tutte le persone
+                    a Mohole?<br><br>
+                    43 <br>Come spingere tutte le persone
                     ad utilizzare i mezzi di trasporto
-                    elettrici?<br>
-                    44 Costi della vita troppo alti, vivere
-                    o sopravvivere?<br>
-                    45 Perché si prova quasi sempre timore
+                    elettrici?<br><br>
+                    44 <br>Costi della vita troppo alti, vivere
+                    o sopravvivere?<br><br>
+                    45 <br>Perché si prova quasi sempre timore
                     nel parlare con persone nuove specie
-                    se più grandi di noi?<br>
-                    46 Camminare con i tacchi senza fare
-                    rumore<br>
-                    47 L’inchiostro che finisce nelle penne<br>
-                    48 Lo sciacquone che non scarica<br>
+                    se più grandi di noi?<br><br>
+                    46 <br>Camminare con i tacchi senza fare
+                    rumore<br><br>
+                    47 <br>L’inchiostro che finisce nelle penne<br><br>
+                    48 <br>Lo sciacquone che non scarica<br><br>
                     se metto lo Scottex nel water
-                    49 Perché gli occhiali da vista
-                    si appannano sempre?<br>
-                    50 È un dilemma scegliere una pizza
-                    che non sia la bufalina<br>
-                    51 Troppi pochi posti nei mezzi pubblici<br>
-                    52 Come far smettere alla mamma<br>
-                    di urlare la mattina per svegliarmi<br>
-                    53 Come trovare la giusta motivazione?<br>
-                    54 Biglietto Atm, convalidazione tramite
-                    smartphone NFC?<br>
-                    55 Come ridurre lo spreco dei ristoranti<br>
-                    56 Come posso fare per concentrarmi
-                    di più?<br>
-                    57 Perché alcune biro hanno l’inchiostro
-                    ma risultano scariche?<br>
-                    58 Il filo delle cuffie che si arrotola<br>
-                    59 Sistema di salvataggio delle idee<br>
-                    60 Metodo per riutilizzare ogni singolo
+                    49 <br>Perché gli occhiali da vista
+                    si appannano sempre?<br><br>
+                    50 <br>È un dilemma scegliere una pizza
+                    che non sia la bufalina<br><br>
+                    51 <br>Troppi pochi posti nei mezzi pubblici<br><br>
+                    52 <br>Come far smettere alla mamma
+                    di urlare la mattina per svegliarmi<br><br>
+                    53 <br>Come trovare la giusta motivazione?<br><br>
+                    54 <br>Biglietto Atm, convalidazione tramite
+                    smartphone NFC?<br><br>
+                    55 <br>Come ridurre lo spreco dei ristoranti<br><br>
+                    56 <br>Come posso fare per concentrarmi
+                    di più?<br><br>
+                    57 <br>Perché alcune biro hanno l’inchiostro
+                    ma risultano scariche?<br><br>
+                    58 <br>Il filo delle cuffie che si arrotola<br><br>
+                    59 <br>Sistema di salvataggio delle idee<br><br>
+                    60 <br>Metodo per riutilizzare ogni singolo
                     componente di rifiuto e trasformarlo
-                    in qualcosa di utile<br>
-                    61 Come amare una persona che odi?<br>
-                    62 I programmi richiedono troppa
-                    potenza in locale<br>
-                    63 Touch screen per guanti<br>
-                    64 Perchè i cani vivono molto meno
-                    rispetto all’uomo?<br>
-                    65 Non trovo uno zaino che mi piace<br>
+                    in qualcosa di utile<br><br>
+                    61 <br>Come amare una persona che odi?<br><br>
+                    62 <br>I programmi richiedono troppa
+                    potenza in locale<br><br>
+                    63 <br>Touch screen per guanti<br><br>
+                    64 <br>Perchè i cani vivono molto meno
+                    rispetto all’uomo?<br><br>
+                    65 <br>Non trovo uno zaino che mi piace<br><br>
 
                 </p>
             </div>
