--- a/works.html
+++ b/works.html
@@ -19,9 +19,20 @@
                 <p><a class="grey" href="index.html">Jether Rey Pagaduan</a></p>
             </div>
             <div class="grid_b">
-                        <p class="grey">Web & Graphic<br>Designer</p>
-                        <p id="mtop"><a class="grey" href="about.html">About</a></p>
-                        <p><a class="bold" href="works.html">Works</a></p>
+                <p class="grey">Web & Graphic<br>Designer</p>
+                <p id="mtop"><a class="grey" href="about.html">About</a></p>
+                <p><a class="bold" href="works.html">Works</a></p>
+                <p class="about_m">
+                    <a href="ordine.html">1 Ordine di lettura</a> <br>
+                    <a href="dot.html">2 Dot</a><br>
+                    <a href="immaginazione.html">3 Immaginazione</a><br>
+                    <a href="tangram.html">4 Tangram</a><br>
+                    <a href="pattern.html">5 Pattern</a><br>
+                    <a href="griglia.html">6 Griglia</a><br>
+                    <a href="gesto.html">7 Gesto</a><br>
+                    <a href="problemi.html">8 Problemi</a>
+                </p>
+                </p>
             </div>
             <div class="about">
                 <p>
@@ -51,7 +62,8 @@
                 REY
             </h3>
             <p>
-                Il sito è stato creato a scopo didattico per il corso accademico della Scuola Mohole di Web & App Development e di Interaction Design
+                Il sito è stato creato a scopo didattico per il corso accademico della Scuola Mohole di Web & App
+                Development e di Interaction Design
             </p>
         </div>
     </footer>
