--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
                 <p><a href="about.html">About</a></p>
             </div>
             <div class="grid_c">
-                <p>Milan, MI, Italy</p>
+                <p><a href="https://goo.gl/maps/GcMkPcTVqEyU9pY47" target="_blank">Milan, MI, Italy</a></p>
                 <p id="mtop">jetherpagaduan@gmail.com</p>
                 <p id="mtop1">
                     Linkedin<br>
