--- a/works.html
+++ b/works.html
@@ -24,7 +24,7 @@
                 <p><a class="bold" href="works.html">Works</a></p>
                 <p class="about_m">
                     <a href="ordine.html">1 Ordine di lettura</a> <br>
-                    <a href="dot.html">2 Dot</a><br>
+                    <a href="dotff.html">2 Dot</a><br>
                     <a href="immaginazione.html">3 Immaginazione</a><br>
                     <a href="tangram.html">4 Tangram</a><br>
                     <a href="pattern.html">5 Pattern</a><br>
