--- a/griglia.html
+++ b/griglia.html
@@ -27,7 +27,7 @@
             </div>
             <!-- CAROSELLO -->
             <div class="ordine">
-                <video controls loop autoplay muted class="img2">
+                <video controls loop autoplay muted class="video">
                     <source src="img/gv.mp4" type="video/mp4">
             </div>
         </div>
