--- a/griglia.html
+++ b/griglia.html
@@ -13,12 +13,12 @@
 </head>
 
 <body>
-    <div class="pallino faded">
+    <div class="pallino">
         <div class="grid_2 grid_w">
-            <div class="grid_a grey fix">
+            <div class="grid_a grey">
                 <p><a class="grey" href="index.html">Home</a></p>
             </div>
-            <div class="works fix">
+            <div class="works">
                         <p><a class="grey bold" href="works.html">Works</a></p>
                         <h3 class="works" id="mtop">6 Griglia</h3>
                         <p>
