--- a/problemi.html
+++ b/problemi.html
@@ -9,7 +9,7 @@
     <meta name="description" content="Progetto Web Coding">
     <link rel="icon" type="image/x-icon" href="img/favicon.ico">
     <link rel="stylesheet" href="style.css">
-    <title>GESTO - reyvsid</title>
+    <title>PROBLEMI - reyvsid</title>
 </head>
 
 <body>
